--- a/public/styles.css
+++ b/public/styles.css
@@ -7,13 +7,13 @@ html {
   font-family: "Montserrat", sans-serif;
 }
 body {
-  background: #eee;
-  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
+  background-color: #8a6971;
+  background-image: url("https://www.transparenttextures.com/patterns/cardboard.png");
   padding: 0 16px;
 }
 
 header {
-  background-color: #f5ba13;
+  background-color: #005792;
   margin: auto -16px;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
@@ -91,7 +91,7 @@ form.create-note button {
   position: absolute;
   right: 18px;
   bottom: -18px;
-  background: #f5ba13;
+  background: #005792;
   color: #fff;
   border: none;
   border-radius: 50%;
